updating api and working through swagger
